samples/_failures_safe/1761657867_98efb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34a32056.c: In function ‘main’:
./samples/SAFE/__tmp_34a32056.c:163:46: error: missing terminating " character
  163 |             snprintf(prompt, sizeof(prompt), "A[%zu][%
      |                                              ^~~~~~~~~
./samples/SAFE/__tmp_34a32056.c:163:13: error: expected expression at end of input
  163 |             snprintf(prompt, sizeof(prompt), "A[%zu][%
      |             ^~~~~~~~
./samples/SAFE/__tmp_34a32056.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34a32056.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34a32056.c:163:13: error: expected declaration or statement at end of input
